[package]
name = "logdiver"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["palette"] }
anyhow = "1.0.100"
notify = "8.2.0"
rayon = "1.11.0"
indexmap ="1.9.3"
gjson = "0.8.1"
clap = {version = "4.5.50", features = ["derive"]}
memchr = "2.7.6"
tui-textarea = "0.7.0"
savefile = "0.20.2"
byteorder = "1.5.0"
itertools = "0.13.0"

[dev-dependencies]
insta ="1.43.2"